bug fixed: hero section mobile view

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --text: 0 0% 100%;
-    --background: 180, 3%, 11%;
+    --background: 240, 4%, 14%;
     --foreground: 180, 3%, 95%;
 
     --card: 0 0% 100%;
